--- a/cooksmart/src/app/features/public/recipe-list/recipe-list.scss
+++ b/cooksmart/src/app/features/public/recipe-list/recipe-list.scss
@@ -68,6 +68,11 @@
 
       .filter-select {
         cursor: pointer;
+        padding-right: $spacing-xl;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='12' height='8' viewBox='0 0 12 8'%3E%3Cpath fill='%23666' d='M6 8L0 0h12z'/%3E%3C/svg%3E");
+        background-repeat: no-repeat;
+        background-position: right 12px center;
+        appearance: none;
 
         option {
           padding: $spacing-sm;
